# frame-extractor

./: .gitattributes  .gitignore  README.md  cli.py  config.py  features.py  metrics.py  optical_flow.py  pipeline.py  pyproject.toml  tracker.py  visualization.py
configs/: default.yaml  high.yaml  low.yaml
